Fixed layout issues with viewport scaling, text sizes and layering of navbar

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -9,11 +9,12 @@
 
 .main {
   width: calc(100% - 300px);
+  overflow: hidden;
 }
 
 .home-page {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: top;
@@ -27,6 +28,7 @@
   padding: 6px;
   border-radius: 50px;
 
+  width: auto;
   height: auto;
 
   background: linear-gradient(90deg, black, gray);
