--- a/react-portfolio/src/components/styles/NavBar.css
+++ b/react-portfolio/src/components/styles/NavBar.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  font-size: 24px;
+  font-size: 1.5em;
   padding: 0;
   margin: 0;
 
