--- a/react-portfolio/src/components/styles/ProfileCard.css
+++ b/react-portfolio/src/components/styles/ProfileCard.css
@@ -18,8 +18,8 @@
 }
 
 .profile-card {
-  width: 1000px;
-  height: 500px;
+  width: 45vw;
+  height: 50vh;
   padding: 30px;
 
   background: var(--color-background);
@@ -32,21 +32,24 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+
+  overflow: hidden;
 }
 
 .profile-text {
-  margin-top: 20px;
+  margin: 10% 8px;
   height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   text-align: right;
 }
 
+.profile-text h1 {
+  text-align: inherit;
+}
+
 .headshot-photo {
-  width: auto;
-  height: 450px;
+  width: 18vw;
+  height: 48vh;
+  object-fit: cover;
 
   border-style: solid;
   border-width: 30px;
